<resources>
    <string name="app_name">CallRepresentatives</string>
    <string name="action_settings">Settings</string>

    <string name="action_search">Search</string>
    <string name="toolbar_title">Representatives</string>
    <string name="search_hint">Type state&#8230;</string>

    <string name="state">State</string>
    <string name="name">Name</string>
    <string name="email">email@email.com</string>
    <string name="mobile_number">number</string>
    <string name="email_btn">Email</string>
    <string name="call_btn">Call</string>
    <string name="msg_btn">Message</string>
</resources>
