<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

        <TextView
                android:id="@+id/nameTextView"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/name"
                android:textSize="20sp"/>

        <TextView
                android:id="@+id/stateTextView"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/state"
                android:textSize="20sp"/>

        <TextView
                android:id="@+id/emailTextView"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/email"
                android:textSize="20sp"/>

        <TextView
                android:id="@+id/numberTextView"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/mobile_number"
                android:textSize="20sp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/emailBtn"
                    android:text="@string/email_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/callBtn"
                    android:text="@string/call_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/messageBtn"
                    android:text="@string/msg_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>


        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>